--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "cypress": "^13.15.2",
+    "cypress-file-upload": "^5.0.8",
     "eslint": "^8",
     "eslint-config-next": "14.2.15",
     "postcss": "^8",
